# ames-housing

./: .gitignore  00_data_cleaning.ipynb  01_pairwise_correlations.ipynb  02_descriptive_visualizations.ipynb  03_predictive_models.ipynb  1_data_cleaning.ipynb  2_pairwise_correlations.ipynb  3_descriptive_visualizations.ipynb  4_predictive_models.ipynb  LICENSE  Pipfile  README.md  cleaning_utils.py  data_clean.csv  data_clean_with_transformations.csv  data_documentation.txt  data_raw.xls  pyproject.toml  requirements.txt  tasks.py  utils.py  weakly_and_strongly_correlated_variables.json
data/: correlated_variables.json  data_clean.csv  data_clean_with_transformations.csv  data_clean_with_transformations_and_factors.csv  interesting_variables.json  weakly_and_strongly_correlated_variables.json
