[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ames-housing"
version = "0.1.0.dev0"

authors = [
    "Alexander Hess <alexander@webartifex.biz>",
]
description = "A case study on predicting house prices in Ames, Iowa"
keywords = [
    "data-science",
    "data-cleaning",
    "house-price-prediction",
    "machine-learning",
    "prediction",
    "predictive-analytics",
]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/webartifex/ames-housing"
repository = "https://github.com/webartifex/ames-housing"

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.0.16"
missingno = "^0.4.2"
matplotlib = "^3.4.2"
numpy = "^1.20.3"
pandas = "^1.2.4"
requests = "^2.25.1"
scikit-learn = "^0.24.2"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"
tabulate = "^0.8.9"
tqdm = "^4.61.0"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pylint = "^2.8.2"
