[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "ames-housing"
version = "0.3.0.dev0"

authors = [
    "Alexander Hess <alexander@webartifex.biz>",
]
description = "A case study on predicting house prices in Ames, Iowa"
keywords = [
    "data-science",
    "data-cleaning",
    "house-price-prediction",
    "machine-learning",
    "prediction",
    "predictive-analytics",
]
license = "MIT"

readme = "README.md"
homepage = "https://github.com/webartifex/ames-housing"
repository = "https://github.com/webartifex/ames-housing"

package-mode = false


[tool.poetry.dependencies]
python = "^3.9"

jupyterlab = "^4.2"

matplotlib = "^3.9"
missingno = "^0.5"
numpy = "^2.0"
pandas = "^2.2"
requests = "^2.32"
scikit-learn = "^1.5"
seaborn = "^0.13"
statsmodels = "^0.14"
tabulate = "^0.9"
tqdm = "^4.66"
xlrd = "^2.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.4"}
invoke = "^2.2"
pylint = "^3.2"
